[BUGFIX] Header favorites z-index added

--- a/Resources/Public/Stylesheets/Partials/Header.less
+++ b/Resources/Public/Stylesheets/Partials/Header.less
@@ -77,6 +77,7 @@ div.surfcaptain-header {
 		-webkit-transition: top 0.5s ease 0s, opacity 0.5s ease 0s;
 		text-align: center;
 		opacity: 0.8;
+		z-index: 10;
 		&:hover {
 			top: 0px;
 			opacity: 1;
